2006-10-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (handle_LIBOBJS_or_ALLOCA): If we are in the
	LIBOBJDIR, then we should not add a DEPDIR prefix.
	* tests/pr401.test: Update test.
	* tests/pr401b.test: Likewise.
	* tests/pr401c.test: Likewise.
	Report by Jim Meyering and Eric Blake.

	* lib/depcomp (gcc3): Put dependency extraction flags before the
	`-c' flag, so they appear at the same position as in %FASTDEP%
	mode in depend2.am.  Fixes build failure for FreeBSD's c89,
	which ignores unknown options only after the first non-option.
	Bug report against M4 by Nelson H. F. Beebe.

2006-10-14  Bruno Haible  <bruno@clisp.org>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in ($seen_gettext_intl): New variable.
	(handle_gettext): Consider it.
	(scan_autoconf_traces): Add AM_GNU_GETTEXT_INTL_SUBDIR to the list.
	Set $seen_gettext_intl when it is seen.
	* doc/automake.texi (gettext, Optional): Update.
	* tests/gettext3.test: New test.
	* tests/Makefile.am: Update.

2006-10-14  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh (posix_mkdir): Reject FreeBSD 6.1 mkdir -p -m,
	which incorrectly sets the mode of an existing destination
	directory.  In some cases the unpatched install-sh could do the
	equivalent of "chmod 777 /" or "chmod 0 /" on a buggy FreeBSD
	system.  We hope this is rare in practice, but it's clearly worth
	fixing.  Problem reported by Alex Unleashed in
	<http://lists.gnu.org/archive/html/bug-autoconf/2006-10/msg00012.html>.
	Also, don't bother to check for -m bugs unless we're using -m;
	suggested by Stepan Kasal.

2006-10-14  Geoffrey Keating  <geoffk@apple.com> (tiny change)

	* m4/multi.m4: Non-default multilibs may be cross compilation.

2006-10-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in: Fix some typos in comments.
	* lib/Automake/Variable.pm: Likewise.

2006-10-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (handle_compile): Use subst, for maintainer-check.
