@@ -8508,7 +8508,7 @@ This options is meaningful only when passed as an argument to
 @item @option{no-dependencies}
 @cindex Option, @option{no-dependencies}
 @opindex no-dependencies
-This is similar to using @option{--include-deps} on the command line,
+This is similar to using @option{--ignore-deps} on the command line,
 but is useful for those situations where you don't have the necessary
 bits to make automatic dependency tracking work
 (@pxref{Dependencies}).  In this case the effect is to effectively
