@@ -1,5 +1,12 @@
 2006-10-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* doc/automake.texi (Options): `no-dependencies' is similar
+	to `--ignore-deps', not `--include-deps'.
+	* m4/as.m4 (AM_PROG_AS): If `no-dependencies', do not invoke
+	_AM_DEPENDENCIES.
+	* tests/nodep2.test: New test.
+	* tests/Makefile.am: Adjust.
+
 	* automake.in (handle_LIBOBJS_or_ALLOCA): If we are in the
 	LIBOBJDIR, then we should not add a DEPDIR prefix.
 	* tests/pr401.test: Update test.
